fix send credito
fix send credito

--- a/LavanderiaSistVenta/src/log4j.properties
+++ b/LavanderiaSistVenta/src/log4j.properties
@@ -1,5 +1,5 @@
 #Log File Location !!
-logFileLoc = D:/logs/
+logFileLoc = C:/logs/
  
 # Root Location Option !!
 log4j.rootLogger=DEBUG, consoleAppender, fileAppender
