--- a/LavanderiaAccesoDatos/nbproject/project.properties
+++ b/LavanderiaAccesoDatos/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.Entidades.jar-1=..\\LavanderiaEntidades\\dist\\Entidades.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=..\\lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.Entidades.jar-1}
+    ${file.reference.Entidades.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
